--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>IGO2</title>
   <base href="/igo2/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <!-- inline spinner styles to be able to display spinner right away -->
@@ -62,7 +62,7 @@
       }
     </style>
 
-  <link rel="stylesheet" href="styles.ac490950ac8029874126.css"></head>
+  <link rel="stylesheet" href="styles.714f6ced343e02a148af.css"></head>
   <body>
     <app-root>
       <div class="app-loading">
@@ -72,5 +72,5 @@
         </svg>
       </div>
     </app-root>
-  <script type="text/javascript" src="runtime.f8a83ec340cf5b7ac571.js"></script><script type="text/javascript" src="polyfills.2b2bdd2a911f515f60f1.js"></script><script type="text/javascript" src="main.eec7710c8ac6c956bae8.js"></script></body>
+  <script src="runtime-es2015.af1b92d1c4f31acf1ae5.js" type="module"></script><script src="runtime-es5.af1b92d1c4f31acf1ae5.js" nomodule defer></script><script src="polyfills-es5.273c079dce2abf88afb9.js" nomodule defer></script><script src="polyfills-es2015.82c4b591d6706b74bb67.js" type="module"></script><script src="vendor-es2015.5272d9f13aa95ccb86bc.js" type="module"></script><script src="vendor-es5.5272d9f13aa95ccb86bc.js" nomodule defer></script><script src="main-es2015.743355f4b917ba234a02.js" type="module"></script><script src="main-es5.743355f4b917ba234a02.js" nomodule defer></script></body>
   </html>
