--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!doctype html>
-<html>
-<head>
+<!DOCTYPE html><html><head>
   <meta charset="utf-8">
   <title>IGO2</title>
   <base href="/igo2/">
@@ -63,15 +61,16 @@
       }
     </style>
 
-  <link rel="stylesheet" href="styles.11f3269b09492a5cc4ef.css"></head>
+  <style>body,div,html{border:0;margin:0;padding:0;}body,html{width:100%;height:100%;}*{box-sizing:border-box;}body{margin:0;overflow:hidden;}</style><link rel="stylesheet" href="styles.f64e85751089d7e8713b.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f64e85751089d7e8713b.css"></noscript></head>
   <body>
     <app-root>
       <div class="app-loading">
         Loading...
         <svg class="spinner" viewBox="25 25 50 50">
-          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"/>
+          <circle class="path" cx="50" cy="50" r="20" fill="none" stroke-width="2" stroke-miterlimit="10"></circle>
         </svg>
       </div>
     </app-root>
-  <script src="runtime-es2015.cb3f0305d3d62068a098.js" type="module"></script><script src="runtime-es5.cb3f0305d3d62068a098.js" nomodule defer></script><script src="polyfills-es5.9e590af2fd87cee8a695.js" nomodule defer></script><script src="polyfills-es2015.2b3830c311fa6610fbc4.js" type="module"></script><script src="vendor-es2015.46234f6bab1fe48e5938.js" type="module"></script><script src="vendor-es5.46234f6bab1fe48e5938.js" nomodule defer></script><script src="main-es2015.4af55a939bb314dc4051.js" type="module"></script><script src="main-es5.4af55a939bb314dc4051.js" nomodule defer></script></body>
-  </html>
+  <script src="runtime-es2015.7e476191f6e9fd3ec0cf.js" type="module"></script><script src="runtime-es5.7e476191f6e9fd3ec0cf.js" nomodule defer></script><script src="polyfills-es5.5e386a8bf219bba725d0.js" nomodule defer></script><script src="polyfills-es2015.7e07afe552106a735712.js" type="module"></script><script src="vendor-es2015.54d34caad07048d2bbc3.js" type="module"></script><script src="vendor-es5.54d34caad07048d2bbc3.js" nomodule defer></script><script src="main-es2015.2e770cf661dd678e2655.js" type="module"></script><script src="main-es5.2e770cf661dd678e2655.js" nomodule defer></script>
+  
+</body></html>
