--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
   <!-- inline spinner styles to be able to display spinner right away -->
     <style type="text/css">
@@ -61,7 +62,7 @@
       }
     </style>
 
-  <style>body,div,html{border:0;margin:0;padding:0;}body,html{width:100%;height:100%;}*{box-sizing:border-box;}body{margin:0;overflow:hidden;}</style><link rel="stylesheet" href="styles.c3f89107a753f188b7c5.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c3f89107a753f188b7c5.css"></noscript></head>
+  <style>body{color:#223654;}body,div,html{border:0;margin:0;padding:0;}body,html{width:100%;height:100%;}*{box-sizing:border-box;}body{margin:0;overflow:hidden;}</style><link rel="stylesheet" href="styles.8251816edbf3da2aab14.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.8251816edbf3da2aab14.css"></noscript></head>
   <body>
     <app-root>
       <div class="app-loading">
@@ -71,6 +72,6 @@
         </svg>
       </div>
     </app-root>
-  <script src="runtime-es2015.363e2a5afb886217c4bb.js" type="module"></script><script src="runtime-es5.363e2a5afb886217c4bb.js" nomodule defer></script><script src="polyfills-es5.5e386a8bf219bba725d0.js" nomodule defer></script><script src="polyfills-es2015.7e07afe552106a735712.js" type="module"></script><script src="vendor-es2015.733257ffe04b0c0ae3ba.js" type="module"></script><script src="vendor-es5.733257ffe04b0c0ae3ba.js" nomodule defer></script><script src="main-es2015.6c52c3c1d2e6d59e61dc.js" type="module"></script><script src="main-es5.6c52c3c1d2e6d59e61dc.js" nomodule defer></script>
+  <script src="runtime-es2015.2f320f36c624b719a77c.js" type="module"></script><script src="runtime-es5.2f320f36c624b719a77c.js" nomodule defer></script><script src="polyfills-es5.2ea3706ee4676759cd7f.js" nomodule defer></script><script src="polyfills-es2015.2d1b31d2ba7fb3ad94b6.js" type="module"></script><script src="vendor-es2015.f1b466fbb381784e0ac6.js" type="module"></script><script src="vendor-es5.f1b466fbb381784e0ac6.js" nomodule defer></script><script src="main-es2015.10c6c13399e9dd59c668.js" type="module"></script><script src="main-es5.10c6c13399e9dd59c668.js" nomodule defer></script>
   
 </body></html>
