--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       }
     </style>
 
-  <style>body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.5659f7da11fe658d.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.5659f7da11fe658d.css"></noscript></head>
+  <style>:root{--ol-background-color:white;--ol-accent-background-color:#F5F5F5;--ol-subtle-background-color:rgba(128, 128, 128, .25);--ol-partial-background-color:rgba(255, 255, 255, .75);--ol-foreground-color:#333333;--ol-subtle-foreground-color:#666666;--ol-brand-color:#00AAFF}body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.cb6becd069c3b2bd.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.cb6becd069c3b2bd.css"></noscript></head>
   <body>
     <app-root>
       <div class="app-loading">
@@ -72,6 +72,6 @@
         </svg>
       </div>
     </app-root>
-  <script src="runtime.694d448a7793a0aa.js" type="module"></script><script src="polyfills.c5ee03160b3c2427.js" type="module"></script><script src="vendor.18f7fcccc2cfa57e.js" type="module"></script><script src="main.48def061ac65334d.js" type="module"></script>
+  <script src="runtime.694d448a7793a0aa.js" type="module"></script><script src="polyfills.c5ee03160b3c2427.js" type="module"></script><script src="vendor.474aee313d9c6b1e.js" type="module"></script><script src="main.c0b3e20b720fa10f.js" type="module"></script>
   
 </body></html>
