--- a/index.html
+++ b/index.html
@@ -62,7 +62,10 @@
       }
     </style>
 
-  <style>:root{--ol-background-color:white;--ol-accent-background-color:#F5F5F5;--ol-subtle-background-color:rgba(128, 128, 128, .25);--ol-partial-background-color:rgba(255, 255, 255, .75);--ol-foreground-color:#333333;--ol-subtle-foreground-color:#666666;--ol-brand-color:#00AAFF}body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.052c269b7bf6ba2c.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.052c269b7bf6ba2c.css"></noscript></head>
+    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="apple-touch-icon" href="assets/icons/icon-192x192-full.png">
+  <meta name="theme-color" content="#1976d2">
+<style>:root{--ol-background-color:white;--ol-accent-background-color:#F5F5F5;--ol-subtle-background-color:rgba(128, 128, 128, .25);--ol-partial-background-color:rgba(255, 255, 255, .75);--ol-foreground-color:#333333;--ol-subtle-foreground-color:#666666;--ol-brand-color:#00AAFF}body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.052c269b7bf6ba2c.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.052c269b7bf6ba2c.css"></noscript></head>
   <body>
     <app-root>
       <div class="app-loading">
@@ -72,6 +75,7 @@
         </svg>
       </div>
     </app-root>
-  <script src="runtime.694d448a7793a0aa.js" type="module"></script><script src="polyfills.c5ee03160b3c2427.js" type="module"></script><script src="vendor.a2671c6d0f795346.js" type="module"></script><script src="main.0968251b608404d5.js" type="module"></script>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
+<script src="runtime.fb07294799a77d03.js" type="module"></script><script src="polyfills.c5ee03160b3c2427.js" type="module"></script><script src="vendor.24f3a8c09432a598.js" type="module"></script><script src="main.7a6b8f718b3cdb7b.js" type="module"></script>
   
 </body></html>
