--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0, user-scalable=0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
 
   <!-- inline spinner styles to be able to display spinner right away -->
     <style type="text/css">
@@ -62,10 +61,10 @@
       }
     </style>
 
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" id="igoManifestByConfig">
     <link rel="apple-touch-icon" href="assets/icons/icon-192x192-full.png">
   <meta name="theme-color" content="#1976d2">
-<style>:root{--ol-background-color:white;--ol-accent-background-color:#F5F5F5;--ol-subtle-background-color:rgba(128, 128, 128, .25);--ol-partial-background-color:rgba(255, 255, 255, .75);--ol-foreground-color:#333333;--ol-subtle-foreground-color:#666666;--ol-brand-color:#00AAFF}body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.c891fd8822dbe5ea.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.c891fd8822dbe5ea.css"></noscript></head>
+<style>:root{--ol-background-color:white;--ol-accent-background-color:#F5F5F5;--ol-subtle-background-color:rgba(128, 128, 128, .25);--ol-partial-background-color:rgba(255, 255, 255, .75);--ol-foreground-color:#333333;--ol-subtle-foreground-color:#666666;--ol-brand-color:#00AAFF}body{color:#223654}html,body,div{border:0;margin:0;padding:0}html,body{width:100%;height:100%}*{box-sizing:border-box}body{margin:0;overflow:hidden}</style><link rel="stylesheet" href="styles.f11418910ab82aa7.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.f11418910ab82aa7.css"></noscript></head>
   <body>
     <app-root>
       <div class="app-loading">
@@ -76,6 +75,6 @@
       </div>
     </app-root>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="runtime.389cface7055938f.js" type="module"></script><script src="polyfills.d497ff0ad0c04819.js" type="module"></script><script src="vendor.893c330fdc43b2e5.js" type="module"></script><script src="main.d95b59622b6504e5.js" type="module"></script>
+<script src="runtime.6a97c0f74c333f6a.js" type="module"></script><script src="polyfills.b604ca8716c559bc.js" type="module"></script><script src="vendor.7b80314ad666092f.js" type="module"></script><script src="main.08c06f25dde41b92.js" type="module"></script>
   
 </body></html>
