--- a/404.html
+++ b/404.html
@@ -65,7 +65,7 @@
       }
 
       #splash-screen__filmstrip img {
-        width: fit-content;
+        width: auto;
         height: 95px;
       }
 
@@ -102,5 +102,5 @@
       }
     </style>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
-  <script src="runtime.b3601c0a1ff2962c.js" type="module"></script><script src="polyfills.66ed49ba0eba0663.js" type="module"></script><script src="vendor.9ee29c315214456c.js" type="module"></script><script src="main.cf8f6b5eaf89f1f0.js" type="module"></script></body>
+  <script src="runtime.b3601c0a1ff2962c.js" type="module"></script><script src="polyfills.66ed49ba0eba0663.js" type="module"></script><script src="vendor.949ecfc4b1aad1fc.js" type="module"></script><script src="main.1f32d6a1b25b1aa9.js" type="module"></script></body>
 </html>
